--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <div class="key-row">
             <button class="key action-key">AC</button>
             <button class="key action-key">DEL</button>
+            <button class="key">n!</button>
+            <button class="key">π</button>
+          </div>
+          <div class="key-row">
+            <button class="key">a²</button>
+            <button class="key">√</button>
             <button class="key">%</button>
             <button class="key">÷</button>
           </div>
