--- a/index.html
+++ b/index.html
@@ -14,49 +14,52 @@
     <div class="calculator-body">
       <div class="result-screen">
         <div class="previous-result">
-        110
+        0
         </div>
         <div class="current-result">
-        55+55
+        0
         </div>
         </div>
         <div class="keys">
           <div class="key-row">
-            <button class="key action-key">AC</button>
-            <button class="key action-key">DEL</button>
-            <button class="key">n!</button>
-            <button class="key">π</button>
+            <button class="key action-key btnac">AC</button>
+            <button class="key action-key btndel">DEL</button>
+            <button class="key btnf">n!</button>
+            <button class="key btnpi">π</button>
           </div>
           <div class="key-row">
-            <button class="key">a²</button>
-            <button class="key">√</button>
-            <button class="key">%</button>
-            <button class="key">÷</button>
+            <button class="key btnsq">a²</button>
+            <button class="key btnsqrt">√</button>
+            <button class="key btnper">%</button>
+            <button class="key btnd">÷</button>
           </div>
           <div class="key-row">
-            <button class="key">7</button>
-            <button class="key">8</button>
-            <button class="key">9</button>
-            <button class="key">x</button>
+            <button class="key btn7" value="7">7</button>
+            <button class="key btn8" value="8">8</button>
+            <button class="key btn9" value="9">9</button>
+            <button class="key btnm">x</button>
           </div>
           <div class="key-row">
-            <button class="key">4</button>
-            <button class="key">5</button>
-            <button class="key">6</button>
-            <button class="key">-</button>
+            <button class="key btn4" value="4">4</button>
+            <button class="key btn5" value="5">5</button>
+            <button class="key btn6" value="6">6</button>
+            <button class="key btns">-</button>
           </div>
           <div class="key-row">
-            <button class="key">1</button>
-            <button class="key">2</button>
-            <button class="key">3</button>
-            <button class="key">+</button>
+            <button class="key btn1" value="1">1</button>
+            <button class="key btn2" value="2">2</button>
+            <button class="key btn3" value="3">3</button>
+            <button class="key btnp">+</button>
           </div>
           <div class="key-row">
-            <button class="key">.</button>
-            <button class="key">0</button>
-            <button class="key double-key action-key">=</button>
+            <button class="key btnpoint">.</button>
+            <button class="key btn0" value="0">0</button>
+            <button class="key double-key action-key btnans">=</button>
           </div>
         </div>
     </div>
+
+
+    <script src="js/script.js"></script>
   </body>
 </html>
